k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  labels:
    app: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
    template:
      metadata:
        labels:
          app: go-app
      spec:
        containers:
          - name: go-app
            image: aslindhurai/go-blog-app:latest
            ports:
              - containerPort: 8080
